<?xml version="1.0" encoding="utf-8"?><!--Diseño de la pantalla de detalles (orientacion Vertical)-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="personaje"
            type="dam.pmdm.tarea2smr.PersonajeData" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Imagen del personaje-->
            <ImageView
                android:id="@+id/image_personaje"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/imagen_del_personaje"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintDimensionRatio="H,4:5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth="0.8" />

            <!--nombre del personaje-->
            <TextView
                android:id="@+id/nombre_personaje"
                style="@style/StyleTitleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_personaje"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_personaje" />

            <!--descripcion del personaje-->
            <TextView
                android:id="@+id/descripcion_personaje"
                style="@style/StyleTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_personaje"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nombre_personaje" />

            <!--poderes del personaje-->
            <TextView
                android:id="@+id/caracteristicas_personaje"
                style="@style/StyleTextCaracteristicas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caracteristicas_del_personaje"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descripcion_personaje" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
